<resources>
    <string name="app_name">Control de Tiempo</string>
    <string name="start">Iniciar</string>
    <string name="pause">Pausar</string>
    <string name="finalize">Guardar</string>
    <string name="newtime">Listar Actividad</string>
    <string name="distance">Distancia</string>
    <string name="description">Descripción</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="start_clicked">Iniciar el Cronometro</string>
    <string name="pause_clicked">Debe Pausar antes de Guardar</string>
    <string name="title">Desea</string>
    <string name="restart">Reiniciar</string>
    <string name="Lista">Mi Historial</string>

</resources>