<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_layout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_layout">

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/number"
                android:padding="10dp"
                android:textSize="22dp"
                android:text="@string/newtime" android:fontFamily="@font/poppins_gorda"
                android:id="@+id/textView2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTime"
                android:enabled="false"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/number"
                android:textSize="15dp"/>

        <EditText
            android:id="@+id/txtDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/number"
            android:textSize="15dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDistance"
                android:hint="@string/distance"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/number"
                android:textSize="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDescription"
                android:hint="@string/description"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/number"
                android:textSize="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_btn_form"
                android:fontFamily="@font/poppins_gorda"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/border_btn_form"
                android:fontFamily="@font/poppins_gorda"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>