<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoMain"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/number"
            android:textSize="60sp"

            android:textStyle="bold"
            android:gravity="center"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_below="@+id/chronometer"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:orientation="horizontal"
                android:layout_marginLeft="58dp">
                    <ImageView
                        android:id="@+id/btnStart"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:onClick="@string/start_clicked"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_baseline_play_circle_filled_24" />

                    <ImageView
                        android:id="@+id/btnPause"
                        android:layout_width="130dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="90dp"
                        android:onClick="@string/pause_clicked"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_baseline_pause_24" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_below="@+id/linear"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/finalize"
        android:id="@+id/btnFinalize"
        android:background="@drawable/border_radial"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_gorda"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/listaActividades"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btnFinalize"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/poppins_gorda"
        android:padding="10dp"
        android:text="@string/Lista"
        android:textColor="@color/number"
        android:textSize="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTime"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listaActividades"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:scrollbars="vertical" />
</RelativeLayout>